# kfcaio-pmv-si-2025-2-pe7-t2-t1-g4

./: .gitignore
docs/: conhecendo-dados.md
src/: pyproject.toml  sales.ipynb
src/etapa1/: main.py
src/etapa1/data/: train.csv
